fix checkbox aligns, timezone update, tab name

--- a/src/styles/ticket-assign-form.less
+++ b/src/styles/ticket-assign-form.less
@@ -141,6 +141,12 @@
       padding-top: 0px;
     }
   }
+  .abc-checkbox {
+    padding-left: 0px !important;
+  }  
+  .form-check-label {
+    padding-left: 17px !important;
+  }
 }
 
 @media(min-width: 768px) {
